Jsoup_79/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Jsoup_79_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/  /home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:14: error: cannot find symbol
import org.jsoup.nodes.CDataNode;
                      ^
  symbol:   class CDataNode
  location: package org.jsoup.nodes
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:15: error: cannot find symbol
import org.jsoup.nodes.DataNode;
                      ^
  symbol:   class DataNode
  location: package org.jsoup.nodes
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:16: error: cannot find symbol
import org.jsoup.nodes.DocumentType;
                      ^
  symbol:   class DocumentType
  location: package org.jsoup.nodes
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:17: error: cannot find symbol
import org.jsoup.nodes.Node;
                      ^
  symbol:   class Node
  location: package org.jsoup.nodes
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:18: error: cannot find symbol
import org.jsoup.nodes.TextNode;
                      ^
  symbol:   class TextNode
  location: package org.jsoup.nodes
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:19: error: cannot find symbol
import org.jsoup.nodes.XmlDeclaration;
                      ^
  symbol:   class XmlDeclaration
  location: package org.jsoup.nodes
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:27: error: cannot find symbol
      XmlDeclaration xmlDeclaration0 = new XmlDeclaration("type", "type", false);
      ^
  symbol:   class XmlDeclaration
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:27: error: cannot find symbol
      XmlDeclaration xmlDeclaration0 = new XmlDeclaration("type", "type", false);
                                           ^
  symbol:   class XmlDeclaration
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:34: error: cannot find symbol
      DocumentType documentType0 = new DocumentType("", "", "", "canvas");
      ^
  symbol:   class DocumentType
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:34: error: cannot find symbol
      DocumentType documentType0 = new DocumentType("", "", "", "canvas");
                                       ^
  symbol:   class DocumentType
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:40: error: cannot find symbol
      DataNode dataNode0 = new DataNode((String) null);
      ^
  symbol:   class DataNode
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:40: error: cannot find symbol
      DataNode dataNode0 = new DataNode((String) null);
                               ^
  symbol:   class DataNode
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:41: error: cannot find symbol
      List<Node> list0 = dataNode0.childNodes();
           ^
  symbol:   class Node
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:47: error: cannot find symbol
      XmlDeclaration xmlDeclaration0 = new XmlDeclaration("type", "type", false);
      ^
  symbol:   class XmlDeclaration
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:47: error: cannot find symbol
      XmlDeclaration xmlDeclaration0 = new XmlDeclaration("type", "type", false);
                                           ^
  symbol:   class XmlDeclaration
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:54: error: cannot find symbol
      CDataNode cDataNode0 = new CDataNode("\n * ");
      ^
  symbol:   class CDataNode
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:54: error: cannot find symbol
      CDataNode cDataNode0 = new CDataNode("\n * ");
                                 ^
  symbol:   class CDataNode
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:55: error: cannot find symbol
      TextNode textNode0 = cDataNode0.splitText(0);
      ^
  symbol:   class TextNode
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:61: error: cannot find symbol
      XmlDeclaration xmlDeclaration0 = new XmlDeclaration("type", "type", false);
      ^
  symbol:   class XmlDeclaration
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:61: error: cannot find symbol
      XmlDeclaration xmlDeclaration0 = new XmlDeclaration("type", "type", false);
                                           ^
  symbol:   class XmlDeclaration
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:68: error: cannot find symbol
      DataNode dataNode0 = new DataNode((String) null);
      ^
  symbol:   class DataNode
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:68: error: cannot find symbol
      DataNode dataNode0 = new DataNode((String) null);
                               ^
  symbol:   class DataNode
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:75: error: cannot find symbol
      DataNode dataNode0 = new DataNode((String) null);
      ^
  symbol:   class DataNode
  location: class LeafNode_ESTest
/home/liumengjiao/Desktop/CI/Evosuite/Jsoup_79/Jsoup/evosuite/3/org/jsoup/nodes/LeafNode_ESTest.java:75: error: cannot find symbol
      DataNode dataNode0 = new DataNode((String) null);
                               ^
  symbol:   class DataNode
  location: class LeafNode_ESTest
24 errors
